# league-match-analyzer

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  Procfile  RAILWAY.md  README.md  railway.json  seeding_list.txt
data/: training.csv  win_prob_model.joblib
docs/: DATABASE_SETUP.md  DECISIONS.md  FRONTEND_REFACTOR.md  LLM_DATA_PIPELINE.md  LLM_INTEGRATION.md  LLM_PIPELINE_STATUS.md  LLM_PROMPT_SCALING.md  LLM_RAG_COMPLIMENTARY.md  MATCHCARD_ACTION_PLAN.md  MATCHCARD_LAYOUT_DIAGRAM.md  MATCHCARD_REDESIGN.md  MATCHCARD_REDESIGN_INDEX.md  MATCHCARD_REDESIGN_SUMMARY.md  MATCHCARD_UI_REDESIGN.md  MIGRATION_FINAL.md  MIGRATION_PLAN.md  MIGRATION_PLAN_BACKEND.md  MIGRATION_PLAN_FRONTEND.md  ORIGIN.md  PHASE0_ENDPOINTS.md  RAILWAY_API_DEPLOYMENT.md  RIOT_API_PARTICIPANT_FIELDS.md  SHARED_PACKAGE.md  TECHNICAL_ARCHITECTURE_AND_PATTERNS.md  TECHNICAL_REQUEST_FLOW.md  TICKETS.md  WIN_PROB_MODEL_NOTES.md  app-flow-recommendations.md  app_state.md  home-roundtrip-request-flow-diagram.md  phase0-example-champions.json  phase0-example-match.json  phase0-example-users-matches.json  phase0-example-users-sign-up.json  rag-design.md  sign-in-request-flow-diagram.md  signin-to-home-request-flow.md
league-web/: .gitignore  .prettierrc  TESTING.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
scripts/: api-dev.ts  db-up.ts  (+14 more)
services/llm/: .env.example  Dockerfile  main.py  pyproject.toml
services/llm/app/: __init__.py  config.py  logging.py  worker.py
services/llm/app/jobs/: __init__.py
services/llm/app/workflows/: __init__.py
(+241 files in other folders)
